<resources>
    <string name="app_name">ZocDoc</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="log_in">Log in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Log In</string>
    <string name="tell_us_about_you">Tell us about you</string>
    <string name="specialization">Specialization</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="home">Home</string>
    <string name="statistic">Statistic</string>
    <string name="appointment">Appointment</string>
    <string name="setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--onboarding Heading-->
    <string name="heading1">Your First Steps with ZocDoc: A Comprehensive Onboarding Guide</string>
    <string name="heading2">Welcome to ZocDoc: Navigating Your Healthcare App with Ease</string>
    <string name="heading3">Discover the Power of ZocDoc: An Onboarding Guide for New Users</string>
    <string name="heading4">Maximizing Your ZocDoc Experience: An Introduction to the Healthcare App</string>

    <!--On boarding description-->
    <string name="onboardDes1">This guide is designed to help new users get up and running with the ZocDoc healthcare app. It covers all the essential features and functions of the app, providing a step-by-step walkthrough of the onboarding process.</string>
    <string name="onboardDes2">This guide is designed to help new users get comfortable and confident with the ZocDoc healthcare app. It covers all the key features and functionalities of the app, providing clear and concise instructions for using them. Whether you\'re booking appointments, exploring providers, or managing your health information, this guide will help you navigate the app with ease, so you can take control of your healthcare.</string>
    <string name="onboardDes3">This guide is designed to help new users unlock the full potential of the ZocDoc healthcare app. It covers all the essential features and functions of the app, providing a comprehensive overview of what the app can do. From booking appointments and finding providers to managing your health information and accessing resources, this guide will help you discover the power of ZocDoc and make the most of your healthcare journey.</string>
    <string name="onboardDes4">This guide is designed to help new users get the most out of the ZocDoc healthcare app. It covers all the key features and functionalities of the app, providing clear and concise instructions for using them.\n Whether you\'re booking appointments, exploring providers, or managing your health information, this guide will help you maximize your ZocDoc experience, so you can take control of your healthcare like never before.</string>
    <string name="hello">Hello</string>
    <string name="loading_name">Loading name...</string>
    <string name="want_to_book_an_appointment">Want to book an appointment?</string>
    <string name="enter_the_doctor_s_name_email_or_phone">Enter the doctor\'s name, email or phone</string>
    <string name="doctor_found">Doctor Found!</string>
    <string name="select_date_first">Select Date First</string>
    <string name="my_patients">My patients</string>
    <string name="title_activity_upimanager">UPIManager</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="file_title">File title</string>
    <string name="select_prescription">Select Prescription</string>
    <string name="add_prescription">Add Prescription</string>
    <string name="upload_file">Upload file</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select time</string>
    <string name="situation">Situation</string>
    <string name="booking_confirmed">Booking Confirmed</string>
    <string name="review_your_past_reports">Review your past reports</string>
</resources>