<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".auth.LogInActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/curve_box_final"
            android:paddingLeft="30dp"
            android:paddingTop="60dp"
            android:paddingRight="30dp"
            android:paddingBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/signUpHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/sign_in"
                    android:textColor="@color/black"
                    android:textSize="35sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.099"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/loginIllustration" />

                <TextView
                    android:id="@+id/signUph2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/dm_sans"
                    android:text="Log in to your account"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="@+id/signUpHeader"
                    app:layout_constraintTop_toBottomOf="@+id/signUpHeader" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="end"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                <EditText
                    android:id="@+id/SignIn_Email"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/editfield"
                    android:ems="10"
                    android:fontFamily="@font/dm_sans"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/linearLayout" />

                <EditText
                    android:id="@+id/SignIn_Password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/editfield"
                    android:ems="10"
                    android:fontFamily="@font/dm_sans"
                    android:hint="@string/password"
                    android:longClickable="false"
                    android:drawableEnd="@drawable/visibility_off"
                    android:paddingEnd="15dp"
                    android:inputType="textPassword"
                    android:paddingStart="20dp"
                    android:textColor="@color/black"
                    android:textColorHint="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="@+id/SignIn_Email"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/SignIn_Email"
                    app:layout_constraintTop_toBottomOf="@+id/SignIn_Email" />

                <TextView
                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/dm_sans_bold"
                    android:text="@string/forgot_password"
                    android:textColor="@color/light_blue"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginButton"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:background="@drawable/primary_button"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="@+id/loginButton"
                    app:layout_constraintStart_toStartOf="@+id/loginButton"
                    app:layout_constraintTop_toBottomOf="@+id/loginButton"
                    app:layout_constraintVertical_bias="0.384">

                    <TextView
                        android:id="@+id/sign_in_suggestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/dm_sans"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        tools:layout_editor_absoluteX="131dp"
                        tools:layout_editor_absoluteY="680dp" />

                    <TextView
                        android:id="@+id/toSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/dm_sans_bold"
                        android:text="Create"
                        android:textColor="@color/light_blue"
                        android:textSize="15sp"
                        tools:layout_editor_absoluteX="266dp"
                        tools:layout_editor_absoluteY="676dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>