<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".activity.AddPrescriptionActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="start"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_bold"
            android:text="@string/add_prescription"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginIllustration" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/white_bar"
        android:gravity="center"
        android:layout_marginTop="110dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/imagebrowse"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/dm_sans"
            android:stateListAnimator="@null"
            android:text="@string/select_prescription"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.445" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/imageupload"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/dm_sans"
            android:stateListAnimator="@null"
            android:text="@string/upload_file"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.745" />

        <EditText
            android:id="@+id/filetitle"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:background="@drawable/editfield"
            android:ems="10"
            android:fontFamily="@font/dm_sans"
            android:hint="@string/file_title"
            android:inputType="textPersonName"
            android:paddingLeft="20dp"
            android:textColor="@color/black"
            android:textColorHint="@android:color/darker_gray"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageupload"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagebrowse"
            app:layout_constraintVertical_bias="0.363" />

        <ImageView
            android:id="@+id/filelogo"
            android:layout_width="262dp"
            android:layout_height="210dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/filetitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.245"
            app:srcCompat="@drawable/pdf_icon" />

        <ImageView
            android:id="@+id/cancelfile"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/filelogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.767"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.635"
            app:srcCompat="@drawable/cancel_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:id="@+id/uploaded"
            android:fontFamily="@font/dm_sans_bold"
            android:text="Uploaded"
            android:layout_marginTop="5dp"
            android:textColor="@color/dull_blue"
            android:textSize="25dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/filelogo"
            app:layout_constraintEnd_toStartOf="@+id/cancelfile"
            app:layout_constraintHorizontal_bias="0.743"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>